--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" rel="stylesheet" type="text/css" />    
     <link rel="shortcut icon" href="./src/favicon.ico">
     <title>Todo App</title>
   </head>
   <body>
-    <section class="todoapp">
-      <div id="root"></div>
-    </section>
+    <div id="root"></div>
   </body>
 </html>
